k8s/backend/wasigo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasigo-backend
  namespace: traefik
  labels:
    app: wasigo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasigo-backend
  template:
    metadata:
      labels:
        app: wasigo-backend
    spec:
      containers:
        - name: backend
          image: docker.io/xolhed3rp/wasigo-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: wasigo-backend
  namespace: traefik
spec:
  selector:
    app: wasigo-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasigo-backend-ingress
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-wasigo-security-hardening@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - api.wasigo.137.131.164.217.nip.io
    secretName: wasigo-api-tls
  rules:
  - host: api.wasigo.137.131.164.217.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wasigo-backend #
            port:
              number: 3000
